draft-ietf-rohc-ikev2-extensions-hcoipsec-12

--- a/draft-ietf-rohc-ikev2-extensions-hcoipsec-12.html
+++ b/draft-ietf-rohc-ikev2-extensions-hcoipsec-12.html
@@ -153,14 +153,14 @@
 <tr><td class="header">Network Working Group</td><td class="header">E. Ertekin</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">C. Christou</td></tr>
 <tr><td class="header">Intended status: Standards Track</td><td class="header">R. Jasani</td></tr>
-<tr><td class="header">Expires: August 6, 2010</td><td class="header">Booz Allen Hamilton</td></tr>
+<tr><td class="header">Expires: August 19, 2010</td><td class="header">Booz Allen Hamilton</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">T. Kivinen</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Safenet, Inc.</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">C. Bormann</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Universitaet Bremen TZI</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">February 02, 2010</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">February 15, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />IKEv2 Extensions to Support Robust Header Compression over IPsec<br />draft-ietf-rohc-ikev2-extensions-hcoipsec-11</h1>
+<h1><br />IKEv2 Extensions to Support Robust Header Compression over IPsec<br />draft-ietf-rohc-ikev2-extensions-hcoipsec-12</h1>
 
 <h3>Abstract</h3>
 
@@ -187,7 +187,7 @@ The list of current Internet-Drafts can be accessed at
 The list of Internet-Draft Shadow Directories can be accessed at
 <a href='http://www.ietf.org/shadow.html'>http://www.ietf.org/shadow.html</a>.</p>
 <p>
-This Internet-Draft will expire on August 6, 2010.</p>
+This Internet-Draft will expire on August 19, 2010.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -427,7 +427,7 @@ ROHC Attribute Types</h3>
 <p>MAX_CID (Maximum Context Identifier, AF = 1)
 					</p>
 <blockquote class="text">
-<p>The MAX_CID attribute is a mandatory attribute.  Exactly one MAX_CID attribute MUST be sent.  The MAX_CID field indicates the maximum value of a context Identifier supported by the ROHCoIPsec decompressor.  This attribute value is two octets in length.  The range of values for MAX_CID MUST be at least 0 and at most 16383 (the value 0 implies having one context).  The recipient of the MAX_CID Attribute MUST only use up to MAX_CID context identifiers for compression.
+<p>The MAX_CID attribute is a mandatory attribute.  Exactly one MAX_CID attribute MUST be sent.  The MAX_CID field indicates the maximum value of a context identifier supported by the ROHCoIPsec decompressor.  This attribute value is two octets in length.  The range of values for MAX_CID MUST be at least 0 and at most 16383.  Since CIDs can take values between 0 and MAX_CID, the actual number of contexts that can be used are MAX_CID+1. If MAX_CID is 0, this implies having one context.  The recipient of the MAX_CID Attribute MUST only use up to MAX_CID context identifiers for compression.
 </p>
 </blockquote><p>
 					
