draft-ietf-behave-address-format-10

--- a/draft-ietf-behave-address-format-10.html
+++ b/draft-ietf-behave-address-format-10.html
@@ -152,17 +152,17 @@
 <table summary="layout" width="66%" border="0" cellpadding="0" cellspacing="0"><tr><td><table summary="layout" width="100%" border="0" cellpadding="2" cellspacing="1">
 <tr><td class="header">Network Working Group</td><td class="header">C. Bao</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">CERNET Center/Tsinghua University</td></tr>
-<tr><td class="header">Obsoletes: <a href='http://tools.ietf.org/html/rfc2765'>2765</a> (if&nbsp;approved)</td><td class="header">C. Huitema</td></tr>
-<tr><td class="header">Updates: <a href='http://tools.ietf.org/html/rfc4291'>4291</a> (if&nbsp;approved)</td><td class="header">Microsoft Corporation</td></tr>
-<tr><td class="header">Intended status: Standards Track</td><td class="header">M. Bagnulo</td></tr>
-<tr><td class="header">Expires: January 11, 2011</td><td class="header">UC3M</td></tr>
+<tr><td class="header">Updates: <a href='http://tools.ietf.org/html/rfc4291'>4291</a> (if&nbsp;approved)</td><td class="header">C. Huitema</td></tr>
+<tr><td class="header">Intended status: Standards Track</td><td class="header">Microsoft Corporation</td></tr>
+<tr><td class="header">Expires: February 17, 2011</td><td class="header">M. Bagnulo</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">UC3M</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">M. Boucadair</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">France Telecom</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">X. Li</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">CERNET Center/Tsinghua University</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">July 10, 2010</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">August 16, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />IPv6 Addressing of IPv4/IPv6 Translators<br />draft-ietf-behave-address-format-09.txt</h1>
+<h1><br />IPv6 Addressing of IPv4/IPv6 Translators<br />draft-ietf-behave-address-format-10.txt</h1>
 
 <h3>Abstract</h3>
 
@@ -190,7 +190,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on January 11, 2011.</p>
+This Internet-Draft will expire on February 17, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -276,7 +276,7 @@ Introduction</h3>
 <p> 
 This document is part of a series of IPv4/IPv6 translation
 documents.  A framework for IPv4/IPv6 translation is discussed in
-<a class='info' href='#I-D.ietf-behave-v6v4-framework'>[I&#8209;D.ietf&#8209;behave&#8209;v6v4&#8209;framework]<span> (</span><span class='info'>Baker, F., Li, X., Bao, C., and K. Yin, &ldquo;Framework for IPv4/IPv6 Translation,&rdquo; October&nbsp;2009.</span><span>)</span></a>, including
+<a class='info' href='#I-D.ietf-behave-v6v4-framework'>[I&#8209;D.ietf&#8209;behave&#8209;v6v4&#8209;framework]<span> (</span><span class='info'>Baker, F., Li, X., Bao, C., and K. Yin, &ldquo;Framework for IPv4/IPv6 Translation,&rdquo; May&nbsp;2010.</span><span>)</span></a>, including
 a taxonomy of scenarios that will be used in this document.
 Other documents specify the behavior of various types
 of translators and gateways, including mechanisms for translating
@@ -363,7 +363,7 @@ to derive an IPv4 address from an IPv6 address or vice versa.
 This applies not only to devices that do IPv4/IPv6 packet 
 translation, but also to other entities that manipulate addresses, 
 such as name resolution proxies (e.g. 
-DNS64 <a class='info' href='#I-D.ietf-behave-dns64'>[I&#8209;D.ietf&#8209;behave&#8209;dns64]<span> (</span><span class='info'>Bagnulo, M., Sullivan, A., Matthews, P., and I. Beijnum, &ldquo;DNS64: DNS extensions for Network Address Translation from IPv6 Clients to IPv4 Servers,&rdquo; December&nbsp;2009.</span><span>)</span></a>) and possibly 
+DNS64 <a class='info' href='#I-D.ietf-behave-dns64'>[I&#8209;D.ietf&#8209;behave&#8209;dns64]<span> (</span><span class='info'>Bagnulo, M., Sullivan, A., Matthews, P., and I. Beijnum, &ldquo;DNS64: DNS extensions for Network Address Translation from IPv6 Clients to IPv4 Servers,&rdquo; July&nbsp;2010.</span><span>)</span></a>) and possibly 
 other types of Application Layer Gateways (ALGs).
 
 </dd>
@@ -425,7 +425,7 @@ is:
 <p>
 </p>
 <p>
-64:FF9B::/96
+64:ff9b::/96
 
 </p>
 </blockquote>
@@ -445,7 +445,7 @@ following diagram, in which PL designates the prefix length:
 <div style='display: table; width: 0; margin-left: 3em; margin-right: auto'><pre>
 
    +--+---+---+---+---+---+---+---+---+---+---+---+---+---+---+---+---+
-   |PL| 0-------------32--40--48--56--64--72--80--88--96--104-112-120-|
+   |PL| 0-------------32--40--48--56--64--72--80--88--96--104---------|
    +--+---+---+---+---+---+---+---+---+---+---+---+---+---+---+---+---+
    |32|     prefix    |v4(32)         | u | suffix                    |
    +--+---+---+---+---+---+---+---+---+---+---+---+---+---+---+---+---+
@@ -466,7 +466,7 @@ following diagram, in which PL designates the prefix length:
 or a "Network-Specific Prefix" unique to the organization deploying the 
 address translators. The prefixes can only have one of the following lengths: 
 32, 40, 48, 56, 64 or 96. 
-(The Well-Known prefic is 96 bits long, and can only 
+(The Well-Known Prefix is 96 bits long, and can only 
 be used in the last form of the table.)
 
 </p>
@@ -576,34 +576,34 @@ dotted decimal notation. Examples of such representations are presented in
 <col align="left"><col align="center"><col align="left">
 <tr><th align="left">Network-Specific Prefix</th><th align="center">IPv4 address</th><th align="left">IPv4-Embedded IPv6 address</th></tr>
 <tr>
-<td align="left">2001:DB8::/32</td>
+<td align="left">2001:db8::/32</td>
 <td align="center">192.0.2.33</td>
-<td align="left">2001:DB8:C000:221::</td>
+<td align="left">2001:db8:c000:221::</td>
 </tr>
 <tr>
-<td align="left">2001:DB8:100::/40</td>
+<td align="left">2001:db8:100::/40</td>
 <td align="center">192.0.2.33</td>
-<td align="left">2001:DB8:1C0:2:21::</td>
+<td align="left">2001:db8:1c0:2:21::</td>
 </tr>
 <tr>
-<td align="left">2001:DB8:122::/48</td>
+<td align="left">2001:db8:122::/48</td>
 <td align="center">192.0.2.33</td>
-<td align="left">2001:DB8:122:C000:2:2100::</td>
+<td align="left">2001:db8:122:c000:2:2100::</td>
 </tr>
 <tr>
-<td align="left">2001:DB8:122:300::/56</td>
+<td align="left">2001:db8:122:300::/56</td>
 <td align="center">192.0.2.33</td>
-<td align="left">2001:DB8:122:3C0:0:221::</td>
+<td align="left">2001:db8:122:3c0:0:221::</td>
 </tr>
 <tr>
-<td align="left">2001:DB8:122:344::/64</td>
+<td align="left">2001:db8:122:344::/64</td>
 <td align="center">192.0.2.33</td>
-<td align="left">2001:DB8:122:344:C0:2:2100::</td>
+<td align="left">2001:db8:122:344:c0:2:2100::</td>
 </tr>
 <tr>
-<td align="left">2001:DB8:122:344::/96</td>
+<td align="left">2001:db8:122:344::/96</td>
 <td align="center">192.0.2.33</td>
-<td align="left">2001:DB8:122:344::192.0.2.33</td>
+<td align="left">2001:db8:122:344::192.0.2.33</td>
 </tr>
 </table>
 <br clear="all" />
@@ -614,9 +614,9 @@ dotted decimal notation. Examples of such representations are presented in
 <col align="left"><col align="center"><col align="left">
 <tr><th align="left">Well Known Prefix</th><th align="center">IPv4 address</th><th align="left">IPv4-Embedded IPv6 address</th></tr>
 <tr>
-<td align="left">64:FF9B::/96</td>
+<td align="left">64:ff9b::/96</td>
 <td align="center">192.0.2.33</td>
-<td align="left">64:FF9B::192.0.2.33</td>
+<td align="left">64:ff9b::192.0.2.33</td>
 </tr>
 </table>
 <br clear="all" />
@@ -626,7 +626,8 @@ dotted decimal notation. Examples of such representations are presented in
 The Network-Specific Prefix examples in 
 <a class='info' href='#textTable'>Table&nbsp;1<span> (</span><span class='info'>Text representation of IPv4-Embedded IPv6 addresses using Network-Specific Prefixes </span><span>)</span></a> are derived from the 
 IPv6 prefix reserved for documentation in <a class='info' href='#RFC3849'>[RFC3849]<span> (</span><span class='info'>Huston, G., Lord, A., and P. Smith, &ldquo;IPv6 Address Prefix Reserved for Documentation,&rdquo; July&nbsp;2004.</span><span>)</span></a>. 
-The IPv4 address 192.0.2.33 is part of the subnet 192.0.2.0/24 reserved for documentation in <a class='info' href='#RFC5735'>[RFC5735]<span> (</span><span class='info'>Cotton, M. and L. Vegoda, &ldquo;Special Use IPv4 Addresses,&rdquo; January&nbsp;2010.</span><span>)</span></a>. 
+The IPv4 address 192.0.2.33 is part of the subnet 192.0.2.0/24 reserved for documentation in <a class='info' href='#RFC5735'>[RFC5735]<span> (</span><span class='info'>Cotton, M. and L. Vegoda, &ldquo;Special Use IPv4 Addresses,&rdquo; January&nbsp;2010.</span><span>)</span></a>.
+The representation of IPv6 addresses is compatible with <a class='info' href='#I-D.ietf-6man-text-addr-representation'>[I&#8209;D.ietf&#8209;6man&#8209;text&#8209;addr&#8209;representation]<span> (</span><span class='info'>Kawamura, S. and M. Kawashima, &ldquo;A Recommendation for IPv6 Address Text Representation,&rdquo; February&nbsp;2010.</span><span>)</span></a>. 
 
 </p>
 <a name="choices"></a><br /><hr />
@@ -758,11 +759,11 @@ can be illustrated with a small example:
 </p>
 <p>
 We will consider an IPv6 network
-with the prefix 2001:DB8:122::/48. The network administrator has selected the Network-Specific 
-prefix 2001:DB8:122:344::/64 for managing stateless IPv4/IPv6 translation. 
+with the prefix 2001:db8:122::/48. The network administrator has selected the Network-Specific 
+prefix 2001:db8:122:344::/64 for managing stateless IPv4/IPv6 translation. 
 The IPv4-Translatable address block for IPv4 subnet 192.0.2.0/24 is 
-2001:DB8:122:344:C0:2::/96. In this network, the host A is assigned the
-IPv4-Translatable IPv6 address 2001:DB8:122:344:C0:2:2100::, which corresponds to the 
+2001:db8:122:344:c0:2::/96. In this network, the host A is assigned the
+IPv4-Translatable IPv6 address 2001:db8:122:344:c0:2:2100::, which corresponds to the 
 IPv4 address 192.0.2.33. Host A's address is configured either manually or through DHCPv6.
 
 </p>
@@ -771,12 +772,12 @@ IPv4 address 192.0.2.33. Host A's address is configured either manually or throu
 <p>
 In this example, host A is not directly connected to the translator, but instead to 
 a link managed by a router R. The router R is configured to forward to A the packets 
-bound to 2001:DB8:122:344:C0:2:2100::. To receive these packets, R will advertise 
-reachability of the prefix 2001:DB8:122:344:C0:2:2100::/104 in the intra-domain 
+bound to 2001:db8:122:344:c0:2:2100::. To receive these packets, R will advertise 
+reachability of the prefix 2001:db8:122:344:c0:2:2100::/104 in the intra-domain 
 routing protocol -- or perhaps a shorter prefix if many hosts on link have 
 IPv4-Translatable IPv6 addresses derived from the same IPv4 subnet. If a packet bound to 
 192.0.2.33 reaches the translator, the destination 
-address will be translated to 2001:DB8:122:344:C0:2:2100::, and the packet will be routed
+address will be translated to 2001:db8:122:344:c0:2:2100::, and the packet will be routed
 towards R and then to A.
 
 </p>
@@ -787,8 +788,8 @@ Let's suppose now that a host B
 of the same domain learns the IPv4 address of A, maybe
 through an application-specific referral. If B has translation-aware software, 
 B can compose a destination address by combining
-the Network-Specific Prefix 2001:DB8:122:344::/64 and the IPv4 address 192.0.2.33,
-resulting in the address 2001:DB8:122:344:C0:2:2100::. The packet sent by B will
+the Network-Specific Prefix 2001:db8:122:344::/64 and the IPv4 address 192.0.2.33,
+resulting in the address 2001:db8:122:344:c0:2:2100::. The packet sent by B will
 be forwarded towards R, and then to A, avoiding protocol translation.
 
 </p>
@@ -839,7 +840,7 @@ are located on the same link.
 <p>
 The recommended prefix length is also a function of the deployment scenario.
 The stateless translation can be used for Scenario 1, Scenario 2, Scenario 5,
-and Scenario 6 defined in <a class='info' href='#I-D.ietf-behave-v6v4-framework'>[I&#8209;D.ietf&#8209;behave&#8209;v6v4&#8209;framework]<span> (</span><span class='info'>Baker, F., Li, X., Bao, C., and K. Yin, &ldquo;Framework for IPv4/IPv6 Translation,&rdquo; October&nbsp;2009.</span><span>)</span></a>. 
+and Scenario 6 defined in <a class='info' href='#I-D.ietf-behave-v6v4-framework'>[I&#8209;D.ietf&#8209;behave&#8209;v6v4&#8209;framework]<span> (</span><span class='info'>Baker, F., Li, X., Bao, C., and K. Yin, &ldquo;Framework for IPv4/IPv6 Translation,&rdquo; May&nbsp;2010.</span><span>)</span></a>. 
 For different scenarios, the prefix length recommendations are:
 </p>
 <ul class="text">
@@ -890,7 +891,7 @@ prefix coordinate their state.
 </p>
 <p>
 Stateful translation can be used in scenarios defined in 
-<a class='info' href='#I-D.ietf-behave-v6v4-framework'>[I&#8209;D.ietf&#8209;behave&#8209;v6v4&#8209;framework]<span> (</span><span class='info'>Baker, F., Li, X., Bao, C., and K. Yin, &ldquo;Framework for IPv4/IPv6 Translation,&rdquo; October&nbsp;2009.</span><span>)</span></a>. The Well Known Prefix SHOULD be used
+<a class='info' href='#I-D.ietf-behave-v6v4-framework'>[I&#8209;D.ietf&#8209;behave&#8209;v6v4&#8209;framework]<span> (</span><span class='info'>Baker, F., Li, X., Bao, C., and K. Yin, &ldquo;Framework for IPv4/IPv6 Translation,&rdquo; May&nbsp;2010.</span><span>)</span></a>. The Well Known Prefix SHOULD be used
 in these scenarios, with two exceptions:
 
 </p>
@@ -939,7 +940,7 @@ computation during translation, as only one of the two addresses would be checks
 We considered reserving 16 bits in the suffix to guarantee checksum neutrality,
 but declined because it would not help with stateful translation, and because checksum neutrality 
 can also be achieved by an appropriate choice of the Network-Specific Prefix, i.e. selecting a prefix
-whose one's complement checksum equals either 0 or 0xFFFF.
+whose one's complement checksum equals either 0 or 0xffff.
 
 </p>
 <p>
@@ -976,7 +977,7 @@ faced with three choices:
 </p>
 <ul class="text">
 <li>
-reuse the IPv4-mapped prefix, ::FFFF:0:0/96, as specified in RFC 2765 Section 2.1; 
+reuse the IPv4-mapped prefix, ::ffff:0:0/96, as specified in RFC 2765 Section 2.1; 
 
 </li>
 <li>
@@ -1002,7 +1003,7 @@ Windows and MacOS generate IPv4 packets, but will not send IPv6 packets. If
 we used the IPv4-mapped prefix, these nodes would not be able to support translation
 without modification. This will defeat the main purpose of the translation techniques.
 We thus eliminated the first choice, and decided to not reuse 
-the IPv4-mapped prefix, ::FFFF:0:0/96.
+the IPv4-mapped prefix, ::ffff:0:0/96.
 
 </p>
 <p>
@@ -1029,7 +1030,7 @@ representation makes the address format easier to use, and log files easier to r
 </p>
 <p> 
 The prefix that we recommend has the particularity of being "checksum neutral". 
-The sum of the hexadecimal numbers "0064" and "FF9B" is "FFFF", i.e. a value equal
+The sum of the hexadecimal numbers "0064" and "ff9b" is "ffff", i.e. a value equal
 to zero in one's complement arithmetic. An IPv4-Embedded IPv6 address constructed with this
 prefix will have the same one's complement checksum as the embedded IPv4 address. 
 
@@ -1132,7 +1133,7 @@ NEW:
 <p>
 </p>
 <p>
-[TBD] The "Well Known Prefix" 64:FF9B::/96 used in an algorithmic mapping between IPv4 to IPv6 addresses is defined out of the
+[TBD] The "Well Known Prefix" 64:ff9b::/96 used in an algorithmic mapping between IPv4 to IPv6 addresses is defined out of the
 0000::/8 address block, per [RFC-ietf-behave-address-format].
 
 </p>
@@ -1234,10 +1235,12 @@ References</h3>
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <h3>9.2.&nbsp;Informative References</h3>
 <table width="99%" border="0">
+<tr><td class="author-text" valign="top"><a name="I-D.ietf-6man-text-addr-representation">[I-D.ietf-6man-text-addr-representation]</a></td>
+<td class="author-text">Kawamura, S. and M. Kawashima, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-6man-text-addr-representation-07.txt">A Recommendation for IPv6 Address Text Representation</a>,&rdquo; draft-ietf-6man-text-addr-representation-07 (work in progress), February&nbsp;2010 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-6man-text-addr-representation-07.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="I-D.ietf-behave-dns64">[I-D.ietf-behave-dns64]</a></td>
-<td class="author-text">Bagnulo, M., Sullivan, A., Matthews, P., and I. Beijnum, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-behave-dns64-04.txt">DNS64: DNS extensions for Network Address Translation from IPv6 Clients to IPv4 Servers</a>,&rdquo; draft-ietf-behave-dns64-04 (work in progress), December&nbsp;2009 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-behave-dns64-04.txt">TXT</a>).</td></tr>
+<td class="author-text">Bagnulo, M., Sullivan, A., Matthews, P., and I. Beijnum, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-behave-dns64-10.txt">DNS64: DNS extensions for Network Address Translation from IPv6 Clients to IPv4 Servers</a>,&rdquo; draft-ietf-behave-dns64-10 (work in progress), July&nbsp;2010 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-behave-dns64-10.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="I-D.ietf-behave-v6v4-framework">[I-D.ietf-behave-v6v4-framework]</a></td>
-<td class="author-text">Baker, F., Li, X., Bao, C., and K. Yin, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-behave-v6v4-framework-03.txt">Framework for IPv4/IPv6 Translation</a>,&rdquo; draft-ietf-behave-v6v4-framework-03 (work in progress), October&nbsp;2009 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-behave-v6v4-framework-03.txt">TXT</a>).</td></tr>
+<td class="author-text">Baker, F., Li, X., Bao, C., and K. Yin, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-behave-v6v4-framework-09.txt">Framework for IPv4/IPv6 Translation</a>,&rdquo; draft-ietf-behave-v6v4-framework-09 (work in progress), May&nbsp;2010 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-behave-v6v4-framework-09.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC1918">[RFC1918]</a></td>
 <td class="author-text"><a href="mailto:yakov@cisco.com">Rekhter, Y.</a>, <a href="mailto:rgm3@is.chrysler.com">Moskowitz, R.</a>, <a href="mailto:Daniel.Karrenberg@ripe.net">Karrenberg, D.</a>, <a href="mailto:GeertJan.deGroot@ripe.net">Groot, G.</a>, and <a href="mailto:lear@sgi.com">E. Lear</a>, &ldquo;<a href="http://tools.ietf.org/html/rfc1918">Address Allocation for Private Internets</a>,&rdquo; BCP&nbsp;5, RFC&nbsp;1918, February&nbsp;1996 (<a href="http://www.rfc-editor.org/rfc/rfc1918.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC3484">[RFC3484]</a></td>
