draft-ietf-ntp-dhcpv6-ntp-opt-06

--- a/draft-ietf-ntp-dhcpv6-ntp-opt-06.html
+++ b/draft-ietf-ntp-dhcpv6-ntp-opt-06.html
@@ -151,28 +151,22 @@
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <table summary="layout" width="66%" border="0" cellpadding="0" cellspacing="0"><tr><td><table summary="layout" width="100%" border="0" cellpadding="2" cellspacing="1">
 <tr><td class="header">Network Working Group</td><td class="header">R. Gayraud</td></tr>
-<tr><td class="header">Internet-Draft</td><td class="header">None</td></tr>
+<tr><td class="header">Internet-Draft</td><td class="header">&nbsp;</td></tr>
 <tr><td class="header">Intended status: Standards Track</td><td class="header">B. Lourdelet</td></tr>
-<tr><td class="header">Expires: April 5, 2010</td><td class="header">Cisco Systems, Inc.</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">October 02, 2009</td></tr>
+<tr><td class="header">Expires: July 11, 2010</td><td class="header">Cisco Systems, Inc.</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">January 07, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />Network Time Protocol (NTP) Server Option for DHCPv6<br />draft-ietf-ntp-dhcpv6-ntp-opt-05.txt</h1>
+<h1><br />Network Time Protocol (NTP) Server Option for DHCPv6<br />draft-ietf-ntp-dhcpv6-ntp-opt-06.txt</h1>
 
+<h3>Abstract</h3>
+
+<p> The NTP Server Option for Dynamic Host Configuration Protocol for IPv6 (DHCPv6) provides NTP (Network Time 
+      Protocol version 4) Server location information to DHCPv6 hosts.
+</p>
 <h3>Status of this Memo</h3>
 <p>
 This Internet-Draft is submitted to IETF in full
-conformance with the provisions of BCP&nbsp;78 and BCP&nbsp;79.
-This document may contain material from IETF Documents or IETF
-Contributions published or made publicly available before November
-10, 2008. The person(s) controlling the copyright in some of this
-material may not have granted the IETF Trust the right to allow
-modifications of such material outside the IETF Standards Process.
-Without obtaining an adequate license from the person(s) controlling
-the copyright in such materials, this document may not be modified
-outside the IETF Standards Process, and derivative works of it may
-not be created outside the IETF Standards Process, except to format
-it for publication as an RFC or to translate it into languages other
-than English.</p>
+conformance with the provisions of BCP&nbsp;78 and BCP&nbsp;79.</p>
 <p>
 Internet-Drafts are working documents of the Internet Engineering
 Task Force (IETF), its areas, and its working groups.
@@ -190,24 +184,35 @@ The list of current Internet-Drafts can be accessed at
 The list of Internet-Draft Shadow Directories can be accessed at
 <a href='http://www.ietf.org/shadow.html'>http://www.ietf.org/shadow.html</a>.</p>
 <p>
-This Internet-Draft will expire on April 5, 2010.</p>
+This Internet-Draft will expire on July 11, 2010.</p>
 
 <h3>Copyright Notice</h3>
 <p>
-Copyright (c) 2009 IETF Trust and the persons identified as the
+Copyright (c) 2010 IETF Trust and the persons identified as the
 document authors.  All rights reserved.</p>
 <p>
 This document is subject to BCP 78 and the IETF Trust's Legal
-Provisions Relating to IETF Documents in effect on the date of
-publication of this document (http://trustee.ietf.org/license-info).
-Please review these documents carefully, as they describe your
-rights and restrictions with respect to this document.</p>
-
-<h3>Abstract</h3>
-
-<p> The NTP Server Option for Dynamic Host Configuration Protocol for IPv6 (DHCPv6) provides NTP (Network Time 
-      Protocol version 4) Server location information to DHCPv6 hosts.
-</p><a name="toc"></a><br /><hr />
+Provisions Relating to IETF Documents
+(http://trustee.ietf.org/license-info) in effect on the date of
+publication of this document.  Please review these documents
+carefully, as they describe your rights and restrictions with respect
+to this document. Code Components extracted from this document must
+include Simplified BSD License text as described in Section 4.e of
+the Trust Legal Provisions and are provided without warranty as
+described in the BSD License.</p>
+<p>
+This document may contain material from IETF Documents or IETF
+Contributions published or made publicly available before November
+10, 2008.  The person(s) controlling the copyright in some of this
+material may not have granted the IETF Trust the right to allow
+modifications of such material outside the IETF Standards Process.
+Without obtaining an adequate license from the person(s) controlling
+the copyright in such materials, this document may not be modified
+outside the IETF Standards Process, and derivative works of it may
+not be created outside the IETF Standards Process, except to format
+it for publication as an RFC or to translate it into languages other
+than English.</p>
+<a name="toc"></a><br /><hr />
 <h3>Table of Contents</h3>
 <p class="toc">
 <a href="#anchor1">1.</a>&nbsp;
@@ -268,7 +273,7 @@ Requirements notation</h3>
 Related Work and Usage Model</h3>
 
 <p> The NTP service is publicly offered on the Internet by a number
-    of organizations. Those Servers can be used but not abused, so
+    of organizations. Those Servers can be used but should not be abused, so
     any method which is tasked to disseminate locations of NTP Servers
     must act responsibly in a manner that does not lead to public
     Server overloading.
@@ -379,6 +384,8 @@ The format of the NTP Server Address Suboption is:
   |                                                               |
   +-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
 
+    IPv6 address of the NTP Server: An IPv6 address,
+
     suboption-code: NTP_SUBOPTION_SRV_ADDR (1),
 
     suboption-len: 16.
@@ -405,6 +412,10 @@ The format of the NTP Multicast Address Suboption is:
   |                   Multicast IPv6 address                      |
   |                                                               |
   +-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
+
+
+
+    Multicast IPv6 address: An IPv6 address,
 
     suboption-code: NTP_SUBOPTION_MC_ADDR (2),
 
@@ -437,7 +448,8 @@ The format of the NTP Server FQDN Suboption is:
 
     FQDN: Fully Qualified Domain Name of the NTP Server or SNTP Server.
 	 This field MUST be encoded as described in [RFC3315],
-          section 8.
+          section 8. Internationalized Domain Name are not allowed
+          in this field.
 </pre></div>
 <a name="anchor8"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -508,9 +520,19 @@ RFC 4075 Deprecation</h3>
 <a name="rfc.section.8"></a><h3>8.&nbsp;
 IANA Considerations</h3>
 
-<p>  When this document is published, the IANA is requested to
+<p> When this document is published, the IANA is requested to
      assign an option code from the "DHCPv6 Options Codes" registry
      for OPTION_NTP_SERVER.
+</p>
+<p> IANA is required to maintain a new number space of NTP time source
+   suboptions, located in the BOOTP-DHCP Parameters Registry. The
+   initial suboptions are described in section 4 of this document.
+
+   IANA assigns future NTP time source suboptions with a "IETF
+   Consensus" policy as described in [RFC5226]. Future proposed
+   suboptions are to be referenced symbolically in the Internet-Drafts
+   that describe them, and shall be assigned numeric codes by IANA when
+   approved for publication as an RFC.
 </p>
 <a name="rfc.references"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -523,6 +545,8 @@ References</h3>
 <table width="99%" border="0">
 <tr><td class="author-text" valign="top"><a name="RFC3315">[RFC3315]</a></td>
 <td class="author-text">Droms, R., Bound, J., Volz, B., Lemon, T., Perkins, C., and M. Carney, &ldquo;<a href="http://tools.ietf.org/html/rfc3315">Dynamic Host Configuration Protocol for IPv6 (DHCPv6)</a>,&rdquo; RFC&nbsp;3315, July&nbsp;2003 (<a href="http://www.rfc-editor.org/rfc/rfc3315.txt">TXT</a>).</td></tr>
+<tr><td class="author-text" valign="top"><a name="RFC5226">[RFC5226]</a></td>
+<td class="author-text">Narten, T. and H. Alvestrand, &ldquo;<a href="http://tools.ietf.org/html/rfc5226">Guidelines for Writing an IANA Considerations Section in RFCs</a>,&rdquo; BCP&nbsp;26, RFC&nbsp;5226, May&nbsp;2008 (<a href="http://www.rfc-editor.org/rfc/rfc5226.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="draft-ntpv4">[draft-ntpv4]</a></td>
 <td class="author-text">Burbank, J., Kasch, W., Martin, J., and D. Mills, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-ntp-ntpv4-proto-11.txt">Network Time Protocol Version 4 Protocol And
          Algorithms Specification</a>,&rdquo; draft-ietf-ntp-ntpv4-proto-11 (work in progress), September&nbsp;2008.</td></tr>
@@ -550,8 +574,6 @@ References</h3>
 <table width="99%" border="0" cellpadding="0" cellspacing="0">
 <tr><td class="author-text">&nbsp;</td>
 <td class="author-text">Richard Gayraud</td></tr>
-<tr><td class="author-text">&nbsp;</td>
-<td class="author-text">None</td></tr>
 <tr><td class="author" align="right">Email:&nbsp;</td>
 <td class="author-text"><a href="mailto:richard.gayraud@free.fr">richard.gayraud@free.fr</a></td></tr>
 <tr cellpadding="3"><td>&nbsp;</td><td>&nbsp;</td></tr>
