draft-ietf-keyprov-dskpp-14

--- a/draft-ietf-keyprov-dskpp-14.html
+++ b/draft-ietf-keyprov-dskpp-14.html
@@ -155,15 +155,15 @@
 <tr><td class="header">KEYPROV Working Group</td><td class="header">A. Doherty</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">RSA, The Security Division of EMC</td></tr>
 <tr><td class="header">Intended status: Standards Track</td><td class="header">M. Pei</td></tr>
-<tr><td class="header">Expires: March 7, 2011</td><td class="header">VeriSign, Inc.</td></tr>
+<tr><td class="header">Expires: March 11, 2011</td><td class="header">VeriSign, Inc.</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">S. Machani</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Diversinet Corp.</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">M. Nystrom</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Microsoft Corp.</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">September 3, 2010</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">September 7, 2010</td></tr>
 </table></td></tr></table>
 <h1><br />Dynamic Symmetric Key Provisioning Protocol
-    (DSKPP)<br />draft-ietf-keyprov-dskpp-13.txt</h1>
+    (DSKPP)<br />draft-ietf-keyprov-dskpp-14.txt</h1>
 
 <h3>Abstract</h3>
 
@@ -195,7 +195,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on March 7, 2011.</p>
+This Internet-Draft will expire on March 11, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -1487,24 +1487,22 @@ Authentication Code Format</h3>
 <p>Although this specification recommends using hexadecimal
             characters only for the AC at the application's user interface
             layer and making the TLV triples non-transparent to the user as
-            described in the example above; implementations MAY choose to use
-            other printable Unicode characters <a class='info' href='#UNICODE'>[UNICODE]<span> (</span><span class='info'>Davis, M. and M. Duerst, &ldquo;Unicode Normalization Forms,&rdquo; March&nbsp;2001.</span><span>)</span></a>
-            at the application's user interface layer in order to meet
-            specific local, context or usability requirements. When
-            non-hexadecimal characters are desired at the user interface layer
-            such as when other printable US-ASCII characters or international
-            characters are used, SASLprep <a class='info' href='#RFC4013'>[RFC4013]<span> (</span><span class='info'>Zeilenga, K., &ldquo;SASLprep: Stringprep Profile for User Names and           Passwords,&rdquo; February&nbsp;2005.</span><span>)</span></a> MUST
-            be used to normalize user input before converting it to a string
-            of hexadecimal characters. For example, if a given application
-            allows use of any printable US-ASCII characters and extended ASCII
-            characters for Client ID and password fields and the Client ID is
-            set to "myclient!D" and associated password is set to
-            "mYpas&amp;#rD", the user enters through the keyboard or other
-            means a Client ID of "myclient!D" and a password of
-            "mYpas&amp;#rD" in separate form fields or as instructed by the
-            provider. The application&rsquo;s layer processing user input MUST
-            then convert the values entered by the user to the following
-            string for use in the protocol:
+            described in the example above; implementations MAY additionally
+            choose to use other printable Unicode characters <a class='info' href='#UNICODE'>[UNICODE]<span> (</span><span class='info'>Davis, M. and M. Duerst, &ldquo;Unicode Normalization Forms,&rdquo; March&nbsp;2001.</span><span>)</span></a> at the application's user interface layer
+            in order to meet specific local, context or usability
+            requirements. When non-hexadecimal characters are desired at the
+            user interface layer such as when other printable US-ASCII
+            characters or international characters are used, SASLprep <a class='info' href='#RFC4013'>[RFC4013]<span> (</span><span class='info'>Zeilenga, K., &ldquo;SASLprep: Stringprep Profile for User Names and           Passwords,&rdquo; February&nbsp;2005.</span><span>)</span></a> MUST be used to normalize user input
+            before converting it to a string of hexadecimal characters. For
+            example, if a given application allows use of any printable
+            US-ASCII characters and extended ASCII characters for Client ID
+            and password fields and the Client ID is set to "myclient!D" and
+            associated password is set to "mYpas&amp;#rD", the user enters
+            through the keyboard or other means a Client ID of "myclient!D"
+            and a password of "mYpas&amp;#rD" in separate form fields or as
+            instructed by the provider. The application&rsquo;s layer
+            processing user input MUST then convert the values entered by the
+            user to the following string for use in the protocol:
             "1146D79636C69656E7421442126D5970617326237244" (note that in this
             example the Checksum TLV is not added).
 </p>
